<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arrow_keys_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nihal@todo.todo">nihal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>rcl_lifecycle</build_depend>
  <build_depend>class_loader</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>cartesian_controller_base</build_depend>
  <build_depend>controller_interface</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
